@@ -5,6 +5,8 @@
 	* Fixed [PTYTextView selectedText] and [PTYTextView contentFromX: Y: ToX: Y:] 
 	  so that '\n' is inserted only on a hard wrap.
 	* Added key mapping action "ignore" to throw away key events.
+	* Added support to specify characters to be considered part of word. Will add 
+	  regex support later.
 
 2004-03-06  fabian
 
